--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/node": "20.3.0",
     "@types/react": "^18.2.9",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
@@ -29,11 +30,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@next/font": "^13.4.5",
     "@types/react-dom": "^18.2.4",
+    "@web3-react/core": "8.0.35-beta.0",
+    "@web3-react/metamask": "8.0.28-beta.0",
     "clsx": "^1.2.1",
+    "jotai": "^2.1.1",
     "next": "^13.4.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "wagmi": "^1.1.1"
+    "react-dom": "^18.2.0"
   }
 }
