--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/node": "20.3.0",
     "@types/react": "^18.2.9",
+    "@types/react-json-pretty": "^2.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "autoprefixer": "^10.4.14",
@@ -29,15 +30,25 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.18",
     "@next/font": "^13.4.5",
+    "@openzeppelin/contracts": "^4.9.1",
+    "@polkadot/api": "^10.8.1",
+    "@polkadot/types": "^10.8.1",
+    "@polkadot/util": "^12.3.1",
+    "@polkadot/util-crypto": "^12.3.1",
     "@types/react-dom": "^18.2.4",
     "@web3-react/core": "8.0.35-beta.0",
     "@web3-react/metamask": "8.0.28-beta.0",
     "clsx": "^1.2.1",
+    "daisyui": "^3.1.0",
+    "emittery": "^1.0.1",
+    "ethers": "5.7.2",
     "jotai": "^2.1.1",
     "next": "^13.4.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-json-pretty": "^2.2.0"
   }
 }
